gcc/testsuite/rust/rustc/ui/typeck/struct-index-err-ice-issue-126744_dg.rs
struct X {,} // { dg-error "" "" { target *-*-* } }

fn main() {
    || {
        if let X { x: 1,} = (X {}) {}
    };
}

